# thought-manifold

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  database.db  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  post.py  user.py
backend/app/routers/: __init__.py  auth.py  posts.py  users.py
backend/app/schemas/: __init__.py  post.py  user.py
backend/sql/mysql/: migrate_add_ai_reviews.sql  migrate_add_doi_metadata.sql  migrate_comment_threads.sql  migrate_legacy_to_3nf.sql  migrate_paper_workflow_v2.sql  schema.sql
backend/src/: main.rs
backend/src/ai_review/: mod.rs
backend/src/db/: mod.rs
backend/src/metrics/: mod.rs
backend/src/models/: comment.rs  metrics.rs  mod.rs  paper_version.rs  post.rs  review.rs  review_comment.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  comments.rs  metrics.rs  mod.rs  paper_workflow.rs  posts.rs  reviews.rs  users.rs
backend_rust/: Cargo.toml
backend_rust/src/: main.rs
backend_rust/src/models/: mod.rs  post.rs  user.rs
backend_rust/src/routes/: auth.rs  posts.rs  users.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: DesmosGraphBlock.jsx  Footer.jsx  Header.jsx  MarkdownEditorPreview.jsx  MarkdownRenderer.jsx  PostCard.jsx  TikzCdDiagram.jsx  index.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AboutPage.jsx  Admin.jsx  EditPost.jsx  GuidelinesPage.jsx  Home.jsx  Login.jsx  PostDetail.jsx  Profile.jsx  ReviewCenter.jsx  StaticInfoPage.jsx  Upload.jsx  index.js
frontend/src/utils/: markdown.js
