[package]
name = "backend_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for OAuth / Gemini (rustls to avoid system OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# AI review attachment parsing
quick-xml = "0.37"
zip = "2.2"
pdf-extract = "0.7"

# Random for PKCE
rand = "0.9"

# OAuth PKCE helpers
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"

# Multipart file upload
axum-extra = { version = "0.10", features = ["multipart"] }

[profile.release]
lto = true
codegen-units = 1
